--- a/.github/workflows/generate_cv.yml
+++ b/.github/workflows/generate_cv.yml
@@ -15,7 +15,7 @@ jobs:
       run: docker build -t alvescv - < Dockerfile
       
     - name: Build artifact
-      run: docker run --mount type=bind,src="D:\Repo\Alves\CV",dst="/home/node/CV" --mount type=volume,dst="/home/node/CV/node_modules" alvescv
+      run: docker run --mount type=bind,src=$(pwd),dst="/home/node/CV" --mount type=volume,dst="/home/node/CV/node_modules" alvescv
       
     - uses: actions/upload-artifact@v1
       with:
