--- a/.github/workflows/generate_cv.yml
+++ b/.github/workflows/generate_cv.yml
@@ -23,4 +23,4 @@ jobs:
     - uses: actions/upload-artifact@v1
       with:
         name: CV
-        path: releases/*.*
+        path: releases/CV_Ricardo_Alves.tar.gz
